# WristLingo

./: .cursorignore  .gitattributes  .gitignore  .gitmodules  CODEX_GRADLE_OPTIMIZATIONS.md  CODEX_NONINTERACTIVE_README.md  CODEX_SCRIPTS_README.md  COMPILATION_ERROR_LOG.md  PROMPT_W1_NDK_SETUP.md  PROMPT_W2_JNI_BRIDGE.md  PROMPT_W3_AUDIO_STREAMING.md  PROMPT_W4_VAD_PARTIALS.md  PROMPT_W5_CI_MATRIX.md  README.md  WEAR_TILES_API_FIXES.md  WORKSPACE_SETUP.md  WristLingo.code-workspace  build.gradle.kts  check_wsl_connectivity.sh  fix_java_keystore.sh  gradle.properties  gradlew.bat  jni_skeleton_example.cpp  maintain_codex_env.sh  settings.gradle.kts  setup_codex_env.sh  setup_wristlingo.sh  test_ci_build.sh  verify_16k.ps1  whisper-branch.md
.cursor/: settings.json
.github/workflows/: android-ci-whisper.yml  android-ci.yml  ci-light.yml  ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  whisper_bridge.cpp  whisper_bridge.h
core/: build.gradle.kts
docs/: ABI_STATUS.md  CORE_STATUS.md  _INDEX.md  acceptance-criteria.md  architecture.md  ci.md  privacy-and-permissions.md  providers.md  testing.md  whisper-branch.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tmp_16kb_check/: AndroidManifest.xml  classes10.dex  classes11.dex  classes12.dex  classes13.dex  classes2.dex  classes3.dex  classes4.dex  classes5.dex  classes6.dex  classes7.dex  classes8.dex  classes9.dex  play-services-wearable.properties  resources.arsc
tmp_16kb_check/res/color/: abc_hint_foreground_material_dark.xml  abc_hint_foreground_material_light.xml  common_google_signin_btn_text_dark.xml  switch_thumb_material_dark.xml  switch_thumb_material_light.xml
tmp_16kb_check/res/drawable/: abc_btn_check_material_anim.xml  abc_btn_radio_material_anim.xml  common_google_signin_btn_text_dark_normal.xml  notification_bg.xml  notification_bg_low.xml  notification_icon_background.xml  notification_tile_bg.xml  test_level_drawable.xml  tooltip_frame_dark.xml  tooltip_frame_light.xml
tmp_16kb_check/res/drawable-v21/: abc_dialog_material_background.xml
tmp_16kb_check/res/layout/: abc_action_bar_title_item.xml  abc_activity_chooser_view.xml  abc_activity_chooser_view_list_item.xml  abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_material.xml  abc_alert_dialog_title_material.xml  abc_cascading_menu_item_layout.xml  (+13 more)
tmp_16kb_check/res/layout-v21/: notification_template_custom_big.xml  notification_template_icon_group.xml
tmp_16kb_check/res/layout-v26/: abc_screen_toolbar.xml
tmp_16kb_check/res/layout-watch-v20/: abc_alert_dialog_title_material.xml
wear/: build.gradle.kts  proguard-rules.pro
(+72 files in other folders)
